2001-01-08	Joel Sherrill <joel@OARcorp.com>

	* start/start.S: init_exc_vecs is now called mips_install_isr_entries.
	* wrapup/Makefile.am: Corrected to reflect new libcpu structure.

2000-11-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use ... instead of RTEMS_TOPdir in ACLOCAL_AMFLAGS.

2000-11-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Switch to ACLOCAL_AMFLAGS = -I $(RTEMS_TOPdir)/aclocal.

2000-11-01	Joel Sherrill <joel@OARcorp.com>

	* startup/bspstart.c: assoc.h, error.h, libio_.h, libio.h,
	and libcsupport.h moved from libc to lib/include/rtems and
	now must be referenced as <rtems/XXX.h>.   Header file order
	was cleaned up while doing this.

2000-10-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: ACLOCAL_AMFLAGS= -I $(RTEMS_TOPdir)/macros.
        Switch to GNU canonicalization.

2000-10-24	Alan Cudmore <alanc@linuxstart.com> and
	Joel Sherrill <joel@OARcorp.com>

	* This is a major reworking of the mips64orion port to use 
	gcc predefines as much as possible and a big push to multilib
	the mips port.  The mips64orion port was copied/renamed to mips
	to be more like other GNU tools.  Alan did most of the technical
	work of determining how to map old macro names used by the mips64orion
	port to standard compiler macro definitions.  Joel did the merge
	with CVS magic to keep individual file history and did the BSP
	modifications. Details follow:
	* console/led.S: Switch from using <idtmon.h> to <asm.h>.
	* console/start.S: Switch from using <idtmon.h> to <asm.h>. Added
	define of PMON stacksize.
	* console/idtmem.S: Switch from using <idtmon.h> to <asm.h>.  Also
	reworked conditionals to use gcc predefines.
	* console/idttlb.S: Ditto.

2000-09-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* console/Makefile.am, liblnk/Makefile.am, start/Makefile.am,
	startup/Makefile.am, wrapup/Makefile.am: Include compile.am

2000-08-10	Joel Sherrill <joel@OARcorp.com>

	* ChangeLog: New file.