@@ -272,3 +272,11 @@ rtems_device_driver console_control(
 {
   return RTEMS_SUCCESSFUL;
 }
+
+#include <bspIo.h>
+
+void P4000_output_char(char c) { outbyte( c ); }
+
+BSP_output_char_function_type           BSP_output_char = P4000_output_char;
+BSP_polling_getchar_function_type       BSP_poll_char = NULL;
+
