@@ -1,3 +1,7 @@
+2001-03-14	Joel Sherrill <joel@OARcorp.com>
+
+	* console/console.c: Added printk() support.
+
 2001-01-08	Joel Sherrill <joel@OARcorp.com>
 
 	* start/start.S: init_exc_vecs is now called mips_install_isr_entries.
